# dng_to_gimi

./: .gitignore  CMakeLists.txt  baseball.dng  main.cpp
